src/MainPackage/gebLParser.java
// Generated from D:/Projects/IntelliJProjects/gebL/src/MainPackage\gebL.g4 by ANTLR 4.10.1
package MainPackage;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gebLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LCURL=1, RCURL=2, LSQBR=3, RSQBR=4, LPAR=5, RPAR=6, QUOTE=7, SQUOTE=8, 
		SCOL=9, COL=10, MULT=11, DIV=12, MOD=13, ADD=14, SUB=15, MULTEQ=16, DIVEQ=17, 
		MODEQ=18, ADDEQ=19, SUBEQ=20, ASSIGN=21, GT=22, LT=23, GTOE=24, LTOE=25, 
		EQ=26, NEQ=27, AND=28, OR=29, PRINT=30, IF=31, ELSEIF=32, ELSE=33, SWITCH=34, 
		CASE=35, BREAK=36, WHILE=37, DO=38, FOR=39, FOREACH=40, DEF=41, RETURN=42, 
		INT=43, FLOAT=44, STRING=45, ID=46, STRING_VAL=47, FUNC_NAME=48, NUM=49, 
		COMMENT=50, WS=51;
	public static final int
		RULE_list = 0, RULE_struct = 1, RULE_varHandler = 2, RULE_decisionalStatements = 3, 
		RULE_curlyBlock = 4, RULE_loopStatements = 5, RULE_print = 6, RULE_comparisonExpression = 7, 
		RULE_logicalExpression = 8, RULE_operation = 9, RULE_types = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"list", "struct", "varHandler", "decisionalStatements", "curlyBlock", 
			"loopStatements", "print", "comparisonExpression", "logicalExpression", 
			"operation", "types"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "']'", "'['", "'('", "')'", "'\"'", "'''", "';'", 
			"':'", "'*'", "'/'", "'%'", "'+'", "'-'", "'*='", "'/='", "'%='", "'+='", 
			"'-='", "'='", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", 
			"'||'", "'print'", "'if'", "'elseif'", "'else'", "'switch'", "'case'", 
			"'break'", "'while'", "'do'", "'for'", "'foreach'", "'def'", "'return'", 
			"'int'", "'float'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LCURL", "RCURL", "LSQBR", "RSQBR", "LPAR", "RPAR", "QUOTE", "SQUOTE", 
			"SCOL", "COL", "MULT", "DIV", "MOD", "ADD", "SUB", "MULTEQ", "DIVEQ", 
			"MODEQ", "ADDEQ", "SUBEQ", "ASSIGN", "GT", "LT", "GTOE", "LTOE", "EQ", 
			"NEQ", "AND", "OR", "PRINT", "IF", "ELSEIF", "ELSE", "SWITCH", "CASE", 
			"BREAK", "WHILE", "DO", "FOR", "FOREACH", "DEF", "RETURN", "INT", "FLOAT", 
			"STRING", "ID", "STRING_VAL", "FUNC_NAME", "NUM", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gebL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gebLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(gebLParser.EOF, 0); }
		public List<StructContext> struct() {
			return getRuleContexts(StructContext.class);
		}
		public StructContext struct(int i) {
			return getRuleContext(StructContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << DO) | (1L << ID))) != 0)) {
				{
				{
				setState(22);
				struct();
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructContext extends ParserRuleContext {
		public VarHandlerContext varHandler() {
			return getRuleContext(VarHandlerContext.class,0);
		}
		public DecisionalStatementsContext decisionalStatements() {
			return getRuleContext(DecisionalStatementsContext.class,0);
		}
		public LoopStatementsContext loopStatements() {
			return getRuleContext(LoopStatementsContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public StructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructContext struct() throws RecognitionException {
		StructContext _localctx = new StructContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_struct);
		try {
			setState(34);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				varHandler();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				decisionalStatements();
				}
				break;
			case WHILE:
			case DO:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				loopStatements();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 4);
				{
				setState(33);
				print();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarHandlerContext extends ParserRuleContext {
		public VarHandlerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varHandler; }
	 
		public VarHandlerContext() { }
		public void copyFrom(VarHandlerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OperassignContext extends VarHandlerContext {
		public Token op;
		public TerminalNode ID() { return getToken(gebLParser.ID, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TerminalNode SCOL() { return getToken(gebLParser.SCOL, 0); }
		public TerminalNode MULTEQ() { return getToken(gebLParser.MULTEQ, 0); }
		public TerminalNode DIVEQ() { return getToken(gebLParser.DIVEQ, 0); }
		public TerminalNode MODEQ() { return getToken(gebLParser.MODEQ, 0); }
		public TerminalNode ADDEQ() { return getToken(gebLParser.ADDEQ, 0); }
		public TerminalNode SUBEQ() { return getToken(gebLParser.SUBEQ, 0); }
		public OperassignContext(VarHandlerContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterOperassign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitOperassign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitOperassign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignvarContext extends VarHandlerContext {
		public TerminalNode ID() { return getToken(gebLParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(gebLParser.ASSIGN, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TerminalNode SCOL() { return getToken(gebLParser.SCOL, 0); }
		public AssignvarContext(VarHandlerContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterAssignvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitAssignvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitAssignvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarHandlerContext varHandler() throws RecognitionException {
		VarHandlerContext _localctx = new VarHandlerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varHandler);
		int _la;
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new AssignvarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				match(ID);
				setState(37);
				match(ASSIGN);
				setState(38);
				operation(0);
				setState(39);
				match(SCOL);
				}
				break;
			case 2:
				_localctx = new OperassignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				match(ID);
				setState(42);
				((OperassignContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULTEQ) | (1L << DIVEQ) | (1L << MODEQ) | (1L << ADDEQ) | (1L << SUBEQ))) != 0)) ) {
					((OperassignContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(43);
				operation(0);
				setState(44);
				match(SCOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecisionalStatementsContext extends ParserRuleContext {
		public DecisionalStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decisionalStatements; }
	 
		public DecisionalStatementsContext() { }
		public void copyFrom(DecisionalStatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatementContext extends DecisionalStatementsContext {
		public TerminalNode IF() { return getToken(gebLParser.IF, 0); }
		public List<LogicalExpressionContext> logicalExpression() {
			return getRuleContexts(LogicalExpressionContext.class);
		}
		public LogicalExpressionContext logicalExpression(int i) {
			return getRuleContext(LogicalExpressionContext.class,i);
		}
		public List<CurlyBlockContext> curlyBlock() {
			return getRuleContexts(CurlyBlockContext.class);
		}
		public CurlyBlockContext curlyBlock(int i) {
			return getRuleContext(CurlyBlockContext.class,i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(gebLParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(gebLParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(gebLParser.ELSE, 0); }
		public IfStatementContext(DecisionalStatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecisionalStatementsContext decisionalStatements() throws RecognitionException {
		DecisionalStatementsContext _localctx = new DecisionalStatementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decisionalStatements);
		int _la;
		try {
			_localctx = new IfStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(IF);
			setState(49);
			logicalExpression();
			setState(50);
			curlyBlock();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEIF) {
				{
				{
				setState(51);
				match(ELSEIF);
				setState(52);
				logicalExpression();
				setState(53);
				curlyBlock();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(60);
				match(ELSE);
				setState(61);
				curlyBlock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CurlyBlockContext extends ParserRuleContext {
		public TerminalNode LCURL() { return getToken(gebLParser.LCURL, 0); }
		public TerminalNode RCURL() { return getToken(gebLParser.RCURL, 0); }
		public List<StructContext> struct() {
			return getRuleContexts(StructContext.class);
		}
		public StructContext struct(int i) {
			return getRuleContext(StructContext.class,i);
		}
		public CurlyBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_curlyBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterCurlyBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitCurlyBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitCurlyBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CurlyBlockContext curlyBlock() throws RecognitionException {
		CurlyBlockContext _localctx = new CurlyBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_curlyBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(LCURL);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << DO) | (1L << ID))) != 0)) {
				{
				{
				setState(65);
				struct();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopStatementsContext extends ParserRuleContext {
		public LoopStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStatements; }
	 
		public LoopStatementsContext() { }
		public void copyFrom(LoopStatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DoWhileLoopContext extends LoopStatementsContext {
		public TerminalNode DO() { return getToken(gebLParser.DO, 0); }
		public CurlyBlockContext curlyBlock() {
			return getRuleContext(CurlyBlockContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(gebLParser.WHILE, 0); }
		public LogicalExpressionContext logicalExpression() {
			return getRuleContext(LogicalExpressionContext.class,0);
		}
		public DoWhileLoopContext(LoopStatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterDoWhileLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitDoWhileLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitDoWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileLoopContext extends LoopStatementsContext {
		public TerminalNode WHILE() { return getToken(gebLParser.WHILE, 0); }
		public LogicalExpressionContext logicalExpression() {
			return getRuleContext(LogicalExpressionContext.class,0);
		}
		public CurlyBlockContext curlyBlock() {
			return getRuleContext(CurlyBlockContext.class,0);
		}
		public WhileLoopContext(LoopStatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterWhileLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitWhileLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopStatementsContext loopStatements() throws RecognitionException {
		LoopStatementsContext _localctx = new LoopStatementsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_loopStatements);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHILE:
				_localctx = new WhileLoopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(WHILE);
				setState(74);
				logicalExpression();
				setState(75);
				curlyBlock();
				}
				break;
			case DO:
				_localctx = new DoWhileLoopContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(DO);
				setState(78);
				curlyBlock();
				setState(79);
				match(WHILE);
				setState(80);
				logicalExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(gebLParser.PRINT, 0); }
		public TerminalNode LPAR() { return getToken(gebLParser.LPAR, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(gebLParser.RPAR, 0); }
		public TerminalNode SCOL() { return getToken(gebLParser.SCOL, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(PRINT);
			setState(85);
			match(LPAR);
			setState(86);
			operation(0);
			setState(87);
			match(RPAR);
			setState(88);
			match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonExpressionContext extends ParserRuleContext {
		public Token op;
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode EQ() { return getToken(gebLParser.EQ, 0); }
		public TerminalNode GT() { return getToken(gebLParser.GT, 0); }
		public TerminalNode LT() { return getToken(gebLParser.LT, 0); }
		public TerminalNode LTOE() { return getToken(gebLParser.LTOE, 0); }
		public TerminalNode GTOE() { return getToken(gebLParser.GTOE, 0); }
		public TerminalNode NEQ() { return getToken(gebLParser.NEQ, 0); }
		public ComparisonExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterComparisonExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitComparisonExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitComparisonExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonExpressionContext comparisonExpression() throws RecognitionException {
		ComparisonExpressionContext _localctx = new ComparisonExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comparisonExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			operation(0);
			setState(91);
			((ComparisonExpressionContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << GTOE) | (1L << LTOE) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
				((ComparisonExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(92);
			operation(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalExpressionContext extends ParserRuleContext {
		public Token op;
		public TerminalNode LPAR() { return getToken(gebLParser.LPAR, 0); }
		public List<ComparisonExpressionContext> comparisonExpression() {
			return getRuleContexts(ComparisonExpressionContext.class);
		}
		public ComparisonExpressionContext comparisonExpression(int i) {
			return getRuleContext(ComparisonExpressionContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(gebLParser.RPAR, 0); }
		public List<TerminalNode> AND() { return getTokens(gebLParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(gebLParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(gebLParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(gebLParser.OR, i);
		}
		public LogicalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).enterLogicalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gebLListener ) ((gebLListener)listener).exitLogicalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gebLVisitor ) return ((gebLVisitor<? extends T>)visitor).visitLogicalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalExpressionContext logicalExpression() throws RecognitionException {
		LogicalExpressionContext _localctx = new LogicalExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_logicalExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LPAR);
			setState(95);
			comparisonExpression();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(96);
				((LogicalExpressionContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
					((LogicalExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(97);
				comparisonExpression();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
